fix the gap between the grids

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -318,7 +318,7 @@ img {
   align-items: center; }
 
 .top-nav {
-  background-image: url("/images/background.jpg");
+  background-image: url("/../images/background.jpg");
   background-size: cover; }
 
 .logo-mobile {
@@ -437,6 +437,7 @@ a {
   .cards {
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-gap: 2rem;
     padding-top: 4rem;
     width: 70%; }
 
