--- a/styles/scss/_landing.scss
+++ b/styles/scss/_landing.scss
@@ -30,7 +30,7 @@ img{
 }
 
 .top-nav{
-    background-image: url("/images/background.jpg");
+    background-image: url("/../images/background.jpg");
     background-size: cover;
     
  
@@ -197,6 +197,7 @@ a{
    .cards{
        display: grid;
        grid-template-columns: 50% 50%;
+       grid-gap: 2rem;
        padding-top: 4rem;
        width: 70%;
    }
